<resources>
    <string name="app_name">Yarn</string>
    <string name="title_interests">Interests</string>
    <string name="title_conversations">Conversations</string>
    <string name="title_settings">Settings</string>
    <string name="interests_knitting">Knitting</string>
    <string name="interests_gardening">Gardening</string>
    <string name="interests_books">Books</string>
    <string name="interests_movies">Movies</string>
    <string name="interests_rugby">Rugby</string>
    <string name="interests_gaming">Gaming</string>
    <string name="toggle_video_camera">Toggle your video camera on or off</string>
    <string name="video_on">Video on</string>
    <string name="video_off">Video off</string>
    <string name="toggle_microphone">Toggle your microphone on or off</string>
    <string name="send_a_photograph">Send a photograph</string>
    <string name="send_photo">Send photo</string>
    <string name="end_the_call">End the call</string>
    <string name="end_call">End call</string>
    <string name="mic_on">Mic on</string>
    <string name="mic_off">Mic off</string>
    <string name="no_one_talking">No one is talking about it.</string>
    <string name="start">Start</string>
    <string name="join_a_conversation">Join a conversation!</string>
    <string name="start_conv_gardening">Start a new conversation about gardening?</string>
    <string name="start_conv_rugby">Start a new conversation about rugby?</string>
    <string name="start_conv_knitting">Start a new conversation about knitting?</string>

    <string name="join">Join</string>
    <string name="title_activity_firebase_sign_in">FirebaseSignInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save">Save</string>
    >>>>>>> main
</resources>