<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="se.umu.yarn.ui.interests.InterestsFragment"
        android:label="@string/title_interests"
        tools:layout="@layout/fragment_interests" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="se.umu.yarn.ui.conversations.ConversationsFragment"
        android:label="@string/title_conversations"
        tools:layout="@layout/fragment_conversations" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="se.umu.yarn.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>