<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CallActivity">


    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/waitingToJoinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Waiting for someone to join you..."
        android:textColor="@color/black"
        android:fontFamily="@font/josefinsans_bold"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:id="@+id/chatControlLayout"
        android:background="@color/white"
        android:padding="16dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/chat_control_button"
                android:padding="4dp"
                android:src="@drawable/ic_videocam"
                android:id="@+id/toggleVideoBtn"
                android:contentDescription="@string/toggle_video_camera"
                app:tint="@color/yarn_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_on"
                android:id="@+id/toggleVideoText"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="36dp">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:background="@drawable/chat_control_button"
                android:id="@+id/toggleMicBtn"
                android:src="@drawable/ic_mic"
                android:contentDescription="@string/toggle_microphone"
                app:tint="@color/yarn_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleMicText"
                android:text="@string/mic_on"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="36dp">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:background="@drawable/chat_control_button"
                android:id="@+id/sendPhotoBtn"
                android:src="@drawable/ic_photo"
                android:contentDescription="@string/send_a_photograph"
                app:tint="@color/yarn_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_photo"
                android:textColor="@color/black"/>
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="60dp"
            android:background="@color/light_grey"
            android:layout_marginStart="36dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="36dp">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:background="@drawable/chat_control_button"
                android:id="@+id/endCallBtn"
                android:src="@drawable/ic_call_end"
                android:contentDescription="@string/end_the_call"
                app:tint="@color/yarn_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_call"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>